Prepare for Code More. "Fractals" post

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -15,8 +15,9 @@
 </head>
 <body>
 <div class="page-header text-center">
-	<h1>Hello, everyone!</h1>
-	<a href="/">home</a>
+	<h1>Code More<br/>
+	    <small>[исправлено и дополнено]</small></h1>
+	<a href="/">главная</a>
 </div>
 <div class="panel panel-default centered">
 	<div class="panel-body">
@@ -25,7 +26,7 @@
 </div>
 <hr />
 <div class="centered text-center">
-<small>Nurgaliev AT, 2014<br />
+<small>© Code More Team, 2014<br />
 <a href="https://github.com/n-at" target="_blank">GitHub</a></small>
 </div>
 </body>
