--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -17,7 +17,10 @@
 <div class="page-header text-center">
 	<h1>Code More<br/>
 	    <small>[исправлено и дополнено]</small></h1>
-	<a href="/">главная</a>
+	<!-- Menu -->
+<a href="/">главная</a>&nbsp;|
+<a href="/catalog">каталог ссылок</a>
+
 </div>
 <div class="panel panel-default centered">
 	<div class="panel-body">
