--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -17,10 +17,7 @@
 <div class="page-header text-center">
 	<h1>Code More<br/>
 	    <small>[исправлено и дополнено]</small></h1>
-	<!-- Menu -->
-<a href="/">главная</a>&nbsp;|
-<a href="/catalog">каталог ссылок</a>
-
+	{% include menu.html %}
 </div>
 <div class="panel panel-default centered">
 	<div class="panel-body">
