Title include. O(N) factorization post

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -15,8 +15,7 @@
 </head>
 <body>
 <div class="page-header text-center">
-	<h1>Code More<br/>
-	    <small>[исправлено и дополнено]</small></h1>
+	{% include title.html %}
 	{% include menu.html %}
 </div>
 <div class="panel panel-default centered">
