--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,5 +3,6 @@ layout: base
 ---
 
 <h2>{{ page.title }} <small><span class="label label-default"> {{ page.date | date_to_string }}</span></small></h2>
+Автор: <span class="text-info">{{ page.author }}</span><br />
 <hr />
 {{ content }}
