--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -25,8 +25,7 @@
 </div>
 <hr />
 <div class="centered text-center">
-<small>© Code More Team, 2014<br />
-<a href="https://github.com/n-at" target="_blank">GitHub</a></small>
+{% include footer.html %}
 </div>
 </body>
 </html>
