--- a/_includes/info.html
+++ b/_includes/info.html
@@ -1,1 +1,4 @@
 <strong>Code More</strong> - это сайт о программировании.
+<br/>
+<br/>
+Старая версия сайта доступна по адресу: <a href="http://pskovcoders.blogspot.com">pskovcoders.blogspot.com</a>
