Using of yandex-hosted libraries

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -3,12 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<!-- CSS -->
-	<link rel="stylesheet" href="/css/bootstrap.min.css">
+	<link rel="stylesheet" href="http://yandex.st/bootstrap/3.0.3/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/css/syntax.css">
 	<link rel="stylesheet" href="/css/styles.css">
 	<!-- JavaScript -->
-	<script src="/js/jquery-1.10.2.min.js"></script>
-	<script src="/js/bootstrap.min.js"></script>
+	<script src="http://yandex.st/jquery/1.10.2/jquery.min.js"></script>
+	<script src="http://yandex.st/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 	<script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 	
 	<title>{{ page.title }}</title>
