--- a/_includes/sections.html
+++ b/_includes/sections.html
@@ -1,1 +1,3 @@
-<a href="/programming">Изучение языков программирования</a><br>
+<p><a href="/programming">Изучение языков программирования</a></p>
+<p><a href="/pskov">Олимпиадное программирование в Псков ГУ</a></p>
+<p><a href="/experimental">Эксперименты</a></p>
