--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
+	<meta charset="UTF-8"/>
+	<link href="favicon.png" rel="icon" type="image/x-png"/>
 	<!-- CSS -->
 	<link rel="stylesheet" href="http://yandex.st/bootstrap/3.0.3/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/css/syntax.css">
