--- a/_layouts/post-pskov.html
+++ b/_layouts/post-pskov.html
@@ -1,10 +1,7 @@
 ---
-layout: base
+layout: post
 ---
 
-<h2>{{ page.title }} <small><span class="label label-default"> {{ page.date | date_to_string }}</span></small></h2>
-Автор: <span class="text-info">{{ page.author }}</span><br />
-<hr />
 {{ content }}
 <br/>
 <a href="/pskov">Вернуться назад</a>
