--- a/_includes/title.html
+++ b/_includes/title.html
@@ -1,2 +1,3 @@
 <h2>Code More!<br/>
-<small>[это только начало]</small></h2>
+<small id="subtitle"></small></h2>
+<script src="/js/subtitle.js"></script>
