--- a/_includes/sections.html
+++ b/_includes/sections.html
@@ -1,3 +1,4 @@
 <p><a href="/programming">Изучение языков программирования</a></p>
 <p><a href="/pskov">Олимпиадное программирование в Псков ГУ</a></p>
 <p><a href="/experimental">Эксперименты</a></p>
+<p><a href="/matematiques">Международный чемпионат математических и логических игр</a></p>
