--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,2 @@
 <small>© Code More Team, 2014<br />
-<a href="https://github.com/n-at" target="_blank">GitHub</a></small>
+<a href="https://github.com/n-at/n-at.github.io" target="_blank">GitHub</a></small>
