--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,12 +4,12 @@
 	<meta charset="UTF-8"/>
 	<link href="favicon.png" rel="icon" type="image/x-png"/>
 	<!-- CSS -->
-	<link rel="stylesheet" href="http://yandex.st/bootstrap/3.0.3/css/bootstrap.min.css">
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/css/syntax.css">
 	<link rel="stylesheet" href="/css/styles.css">
 	<!-- JavaScript -->
 	<script src="http://yandex.st/jquery/1.10.2/jquery.min.js"></script>
-	<script src="http://yandex.st/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
 	<script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 	
 	<title>{{ page.title }}</title>
