--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/css/syntax.css">
 	<link rel="stylesheet" href="/css/styles.css">
+	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300&subset=cyrillic,latin' rel='stylesheet' type='text/css'>
 	<!-- JavaScript -->
 	<script src="http://yandex.st/jquery/1.10.2/jquery.min.js"></script>
 	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
