MathJax вынесен из базового шаблона

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,7 @@
 ---
 layout: base
 ---
+<script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
 <h2>{{ page.title }} <small style="vertical-align: middle;">
 <span class="label label-default" style="vertical-align: middle;"> {{ page.date | date_to_string }}</span>
