--- a/_includes/title.html
+++ b/_includes/title.html
@@ -1,3 +1,3 @@
 <h1>Code More!<br/>
-<small id="subtitle"></small></h1>
-<script src="/js/subtitle.js"></script>
+<!--<small id="subtitle"></small></h1>-->
+<!--<script src="/js/subtitle.js"></script>-->
