--- a/_includes/sections.html
+++ b/_includes/sections.html
@@ -1,4 +1,4 @@
-<p><a href="/programming">Изучение языков программирования</a></p>
-<p><a href="/pskov">Олимпиадное программирование в Псков ГУ</a></p>
-<p><a href="/experimental">Эксперименты</a></p>
-<p><a href="/mathematiques">Международный чемпионат математических и логических игр</a></p>
+<li><a href="/programming">Изучение языков программирования</a></li>
+<li><a href="/pskov">Олимпиадное программирование в Псков ГУ</a></li>
+<li><a href="/mathematiques">Международный чемпионат математических и логических игр</a></li>
+<li><a href="/experimental">Эксперименты</a></li>
