--- a/_layouts/page-base.html
+++ b/_layouts/page-base.html
@@ -2,10 +2,9 @@
 layout: base
 ---
 
-{% include page-menu.html %}
-
 <div class="container">
-    <div class="content-container">
+    <div class="content-container index-container">
+        {% include page-menu.html %}
         {{ content }}
     </div>
 </div>
