--- a/css/styles.css
+++ b/css/styles.css
@@ -12,8 +12,7 @@ h1,h2,h3,h4,h5,h6{
 }
 
 .navbar {
-    background-color: #f0f0f0;
-    box-shadow: 0 3px 6px 6px rgba(150, 150, 150, .3);
+    margin: 0 -10px;
 }
 
 .index-sections {
@@ -30,4 +29,9 @@ h1,h2,h3,h4,h5,h6{
     background-color: #fff;
 
     box-shadow: 0 6px 6px 6px rgba(150, 150, 150, .3);
+}
+
+.index-container {
+    padding-top: 0;
+    margin-top: 0;
 }
