--- a/_includes/sections.html
+++ b/_includes/sections.html
@@ -1,4 +1,27 @@
-<li><a href="/programming">Изучение языков программирования</a></li>
-<li><a href="/pskov">Олимпиадное программирование в Псков ГУ</a></li>
-<li><a href="/mathematiques">Международный чемпионат математических и логических игр</a></li>
-<li><a href="/experimental">Эксперименты</a></li>
+<li>
+    <a href="/programming" class="programming-section">
+        <i class="fa fa-book"></i>
+        Изучение языков программирования
+    </a>
+</li>
+
+<li>
+    <a href="/pskov" class="pskov-section">
+        <i class="fa fa-institution"></i>
+        Олимпиадное программирование в Псков ГУ
+    </a>
+</li>
+
+<li>
+    <a href="/mathematiques" class="mathematiques-section">
+        <i class="fa fa-trophy"></i>
+        Международный чемпионат математических и логических игр
+    </a>
+</li>
+
+<li>
+    <a href="/experimental" class="experimental-section">
+        <i class="fa fa-flask"></i>
+        Эксперименты
+    </a>
+</li>
