--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,7 +6,8 @@
 	<!-- CSS -->
     <link rel="stylesheet" href="/css/arsenal.css">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
-	<link rel="stylesheet" href="/css/syntax.css">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/syntax.css">
 	<link rel="stylesheet" href="/css/styles.css">
 	<!-- JavaScript -->
 	<script src="http://yandex.st/jquery/1.10.2/jquery.min.js"></script>
