--- a/css/styles.css
+++ b/css/styles.css
@@ -13,17 +13,15 @@ h1,h2,h3,h4,h5,h6{
 
 .navbar {
     margin: 0 -20px;
-}
-
-.index-sections {
-    font-size: 1.2em;
+    border-radius: 0;
 }
 
 .content-container {
-    padding: 20px;
-    margin: 5px 5px 10px;
+    padding: 0 20px 20px;
+    margin: 0 5px 10px;
 
     border: 1px #ccc solid;
+    border-top: 1px solid transparent;
     border-radius: 1px;
 
     background-color: #fff;
@@ -31,17 +29,21 @@ h1,h2,h3,h4,h5,h6{
     box-shadow: 0 6px 6px 6px rgba(150, 150, 150, .3);
 }
 
-.index-container {
-    padding-top: 0;
-    margin-top: 0;
-}
-
 .post-date {
     display: inline-block;
     padding: 5px;
-    color: #08c;
     margin: 5px;
     font-size: 0.5em;
+    color: #08c;
     border: 1px #08c solid;
     border-radius: 5px;
+}
+
+.article-item .post-date {
+    font-size: 1em;
+    color: #059;
+}
+
+.article-item a {
+    font-size: 1.2em;
 }
