--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,7 @@
 }
 
 .index-sections .experimental-section {
-    color: #9b009b;
+    color: #9b4697;
 }
 
 /***********************************************************************************************/
