--- a/css/styles.css
+++ b/css/styles.css
@@ -51,3 +51,13 @@ h1,h2,h3,h4,h5,h6{
 .article-item a {
     font-size: 1.2em;
 }
+
+/***************************************************************************/
+
+.sub-header {
+    font-size: 2em;
+    margin: 20px 20px 40px;
+    text-align: center;
+    font-family: 'arsenalregular', Helvetica, Arial, sans-serif;
+    color: #555;
+}
