--- a/css/index.css
+++ b/css/index.css
@@ -21,7 +21,7 @@
 }
 
 .index-sections .mathematiques-section {
-    color: #c39044;
+    color: #bead49;
 }
 
 .index-sections .experimental-section {
