--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,14 @@ layout: page-base
 ---
 <script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
-<h2>{{ page.title }} <div class="post-date">{{ page.date | date_to_string }}</div></h2>
-Автор: <span class="text-info">{{ page.author }}</span><br />
-<hr />
+<div class="article-date">
+    <span class="post-date">{{ page.date | date_to_string }}</span>
+</div>
+
+<div class="article-header">
+    <span class="article-title">{{ page.title }}</span> / <span class="text-info">{{ page.author }}</span>
+</div>
+
+<hr>
+
 {{ content }}
