--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ h1,h2,h3,h4,h5,h6{
     display: inline-block;
     padding: 5px;
     margin: 5px;
-    font-size: 0.5em;
+    font-size: 1em;
     color: #555;
     border: 1px #555 solid;
     border-radius: 5px;
@@ -70,6 +70,22 @@ h1,h2,h3,h4,h5,h6{
 
 .article-item a {
     font-size: 1.2em;
+}
+
+/***************************************************************************/
+
+.article-header {
+    margin-top: 20px;
+}
+
+.article-title {
+    font-family: 'arsenalregular', Helvetica, Arial, sans-serif;
+    font-size: 2em;
+}
+
+.article-date {
+    margin-top: 20px;
+    float: right;
 }
 
 /***************************************************************************/
