--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="/favicon.png" rel="icon" type="image/x-png"/>
 	<!-- CSS -->
     <link rel="stylesheet" href="/css/arsenal.css">
