--- a/_includes/sections.html
+++ b/_includes/sections.html
@@ -25,3 +25,10 @@
         Эксперименты
     </a>
 </li>
+
+<li>
+    <a href="/ARM-Milandr" class="experimental-section">
+        <i class="fa fa-flask"></i>
+        Микроконтроллеры
+    </a>
+</li>
