--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,2 @@
-<small>© Code More Team, 2014<br />
-<a href="https://github.com/n-at/n-at.github.io" target="_blank">GitHub</a></small>
+<small>© Code More Team, 2016<br />
+<a href="https://github.com/codemore-ru/codemore-ru.github.io" target="_blank">GitHub</a></small>
