--- a/_includes/sections.html
+++ b/_includes/sections.html
@@ -27,7 +27,7 @@
 </li>
 
 <li>
-    <a href="/ARM-Milandr" class="experimental-section">
+    <a href="/mc" class="experimental-section">
         <i class="fa fa-flask"></i>
         Микроконтроллеры
     </a>
