--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,24 +1,29 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
 	<meta charset="UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<link href="/favicon.png" rel="icon" type="image/x-png"/>
+
 	<!-- CSS -->
     <link rel="stylesheet" href="/css/arsenal.css">
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="//yastatic.net/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/syntax.css">
 	<link rel="stylesheet" href="/css/styles.css">
+
 	<!-- JavaScript -->
-	<script src="http://yandex.st/jquery/1.10.2/jquery.min.js"></script>
-	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+	<script src="//yastatic.net/jquery/3.1.1/jquery.min.js"></script>
+	<script src="//yastatic.net/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	
 	<title>{{ page.title }}</title>
 </head>
 <body>
 
 {{content}}
+
+{% include metrika.html %}
 
 </body>
 </html>
