--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="yandex-verification" content="173be2348be82a4a" />
 
 	<link href="/favicon.png" rel="icon" type="image/x-png"/>
 
