--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="ru">
 <head>
 	<meta charset="UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,7 +7,17 @@
 	{% if page.description %}
 	    <meta name="description" content="{{ page.description }}">
 	{% endif %}
+	{% if page.keywords %}
+	    <meta name="keywords" content="{{ page.keywords }}">
+	{% endif %}
 
+	<meta name="og:title" content="{{ page.title }}">
+	<meta name="og:url" content="https://codemore.ru{{ page.url }}">
+	<meta name="og:locale" content="ru_RU">
+	{% if page.description %}
+	    <meta name="og:description" content="{{ page.description }}">
+	{% endif %}
+	
 	<link href="/favicon.png" rel="icon" type="image/x-png"/>
 
 	<!-- CSS -->
