--- a/css/index.css
+++ b/css/index.css
@@ -53,6 +53,7 @@
     font-family: 'arsenalregular', Helvetica, Arial, sans-serif;
     font-size: 3em;
     text-align: center;
-    margin: 15px 15px 30px;
+    margin: 0 0 35px;
+    padding-top: 35px;
     color: #555;
 }
