--- a/css/programming.css
+++ b/css/programming.css
@@ -7,14 +7,14 @@
 }
 
 .navbar-default .navbar-brand:hover {
-    color: #222;
+    color: #ffc852;
 }
 
 .navbar-default .navbar-nav > li > a {
     color: #fff;
 }
 .navbar-default .navbar-nav > li > a:hover {
-    color: #222;
+    color: #ffc852;
 }
 
 .label-primary {
