--- a/css/pskov.css
+++ b/css/pskov.css
@@ -22,11 +22,15 @@
 }
 
 .navbar-default .navbar-brand:hover {
-    color: #333;
+    color: #ffc852;
 }
 
 .navbar-default .navbar-nav > li > a{
     color: #fff;
+}
+
+.navbar-default .navbar-nav > li > a:hover{
+    color: #ffc852;
 }
 
 /***************************************************************************/
