--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ h1,h2,h3,h4,h5,h6{
     margin: 0 -20px;
     border-radius: 0;
     background-color: #ddd;
+    border: none;
 }
 
 .navbar-default .navbar-brand {
@@ -42,12 +43,10 @@ h1,h2,h3,h4,h5,h6{
     margin: 0 5px 10px;
 
     border: 1px #ccc solid;
-    border-top: 1px solid transparent;
+    border-top: none;
     border-radius: 1px;
 
     background-color: #fff;
-
-    box-shadow: 0 6px 6px 6px rgba(150, 150, 150, .3);
 }
 
 /***************************************************************************/
