--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,5 @@
-<small>© Code More Team, 2020<br />
-<a href="https://github.com/codemore-ru/codemore-ru.github.io" target="_blank">GitHub</a></small>
+<small>
+    <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Лицензия Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>
+    <br />
+    Code More Team - <a href="https://github.com/codemore-ru/codemore-ru.github.io" target="_blank">GitHub</a>
+</small>
