обновление шаблона главной страницы

--- a/_layouts/legacy-base.html
+++ b/_layouts/legacy-base.html
@@ -40,13 +40,14 @@
 	<link href="/favicon.png" rel="icon" type="image/x-png"/>
 
 	<!-- CSS -->
-	<link rel="stylesheet" href="/vendor/bootstrap-5.3.3/bootstrap.min.css">
+	<link rel="stylesheet" href="/vendor/bootstrap-3.6.6/bootstrap.min.css">
 	<link rel="stylesheet" href="/vendor/arsenal/arsenal.css">
 	<link rel="stylesheet" href="/vendor/syntax.css">
 	<link rel="stylesheet" href="/css/styles.css">
 
 	<!-- JavaScript -->
-	<script src="/vendor/bootstrap-5.3.3/bootstrap.bundle.min.js"></script>
+	<script src="/vendor/jquery-2.2.4/jquery.min.js"></script>
+	<script src="/vendor/bootstrap-3.6.6/bootstrap.min.js"></script>
 	
 	<title>{{ page.title }}</title>
 </head>
