--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,21 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'arsenalregular', Helvetica, Arial, sans-serif;
 }
 
+body {
+    background-color: #fcfcfc;
+}
+
+.content-container {
+    padding: 0 20px 20px;
+    margin: 0 5px 10px;
+
+    border: 1px #dee2e6 solid;
+    border-top: none;
+    border-radius: 1px;
+
+    background-color: #fff;
+}
+
 .section-pskov {
     color: #007f7f !important;
 }
