мелкое обновление шаблона

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,7 +4,7 @@
     </a>
 </div>
 
-<div class="text-center mb-5">
+<div class="text-center" style="margin-bottom: 3rem">
     <div>
         <a href="/catalog" class="section-catalog">Каталог ссылок</a>
         &middot;
