--- a/_layouts/legacy-page-base.html
+++ b/_layouts/legacy-page-base.html
@@ -4,7 +4,7 @@ layout: legacy-base
 
 <div class="container">
     <div class="content-container index-container">
-        {% include page-menu.html %}
+        {% include navigation.html %}
         {{ content }}
     </div>
 </div>
