--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,10 +1,10 @@
-<div class="text-center">
-    <a href="/" class="code-more">
+<div id="code-more-title" class="text-center">
+    <a href="/">
         Code More!
     </a>
 </div>
 
-<div class="text-center" style="margin-bottom: 3rem">
+<div id="code-more-menu" class="text-center">
     <div>
         <a href="/catalog" class="section-catalog">Каталог ссылок</a>
         &middot;
