--- a/_layouts/post-simple.html
+++ b/_layouts/post-simple.html
@@ -1,7 +1,15 @@
 ---
-layout: page-base
+layout: base
 ---
 
-{% include post-title.html %}
+<div class="container">
+    <div class="content-container index-container">
+        {% include navigation.html %}
+        {% include post-title.html %}
+        {{ content }}
+    </div>
+</div>
 
-{{ content }}
+<div class="text-center">
+    {% include footer.html %}
+</div>
