--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,10 @@
     color: #fff !important;
     text-shadow: 1px 1px 2px #555;
 }
+#code-more-post-title h1 {
+    margin-top: .5rem;
+    margin-bottom: .5rem;
+}
 
 #code-more-articles {
     margin-left: -20px;
@@ -61,4 +65,10 @@ body {
 }
 .section-catalog {
     color: #555 !important;
+}
+
+.lineno {
+    border-right: 1px solid #dee2e6;
+    padding-right: 0.25rem;
+    margin-right: 0.5rem;
 }
