--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,7 @@
 #code-more-articles {
     margin-left: -20px;
     margin-right: -20px;
+    margin-bottom: -20px;
 }
 
 h1, h2, h3, h4, h5, h6 {
