темная тема и переключатель тем

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,5 +3,7 @@
         <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Лицензия Creative Commons" style="border-width:0" src="/img/cc.png" /></a>
         <br />
         Code More Team - <a href="https://github.com/codemore-ru/codemore-ru.github.io" class="text-secondary" target="_blank">GitHub</a>
+        <br />
+        <button id="theme-switch" type="button" class="btn btn-link btn-sm text-secondary">Тема</button>
     </small>
 </div>
