--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -11,6 +11,7 @@
 
 	<!-- JavaScript -->
 	<script src="/vendor/bootstrap-5.3.3/bootstrap.bundle.min.js"></script>
+	<script src="/js/theme.js"></script>
 	
 	<title>{{ page.title }}</title>
 </head>
