--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,9 @@
     color: #555;
     text-decoration: none;
 }
+html[data-bs-theme="dark"] #code-more-title a {
+    color: #999;
+}
 
 #code-more-menu {
     margin-bottom: 3rem;
@@ -26,6 +29,9 @@
     margin-top: .5rem;
     margin-bottom: .5rem;
 }
+html[data-bs-theme="dark"] #code-more-post-title div {
+    color: #dee2e6 !important;
+}
 
 #code-more-articles {
     margin-left: -20px;
@@ -40,6 +46,9 @@ h1, h2, h3, h4, h5, h6 {
 body {
     background-color: #fcfcfc;
 }
+html[data-bs-theme="dark"] body {
+    background-color: #181b1e;
+}
 
 .content-container {
     padding: 0 20px 20px;
@@ -50,6 +59,10 @@ body {
     border-radius: 1px;
 
     background-color: #fff;
+}
+html[data-bs-theme="dark"] .content-container {
+    border: 1px #495057 solid;
+    background-color: #212529;
 }
 
 .section-pskov {
@@ -67,9 +80,18 @@ body {
 .section-catalog {
     color: #555 !important;
 }
+html[data-bs-theme="dark"] .section-catalog {
+    color: #999 !important;
+}
 
-.lineno {
+html[data-bs-theme="dark"] .highlight {
+    background-color: #212529;
+}
+.highlight .lineno {
     border-right: 1px solid #dee2e6;
     padding-right: 0.25rem;
     margin-right: 0.5rem;
+}
+html[data-bs-theme="dark"] .highlight .lineno {
+    border-right: 1px solid #495057;
 }
